Cultibox (1.3.04) precise; urgency=low
    + Ajout du menu wifi et des pages associées
    + Ajout du traitement des données XML pour la page wifi
    + Ajout de la possibilité de créer des programmes définit avec une prise variateur

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Feb 12 20:28:12 CET 2014


Cultibox (1.3.03) precise; urgency=low
    + Optimisation de la lecture/ecriture des fichiers
    + Ajout d'une biblothèque de débug
    + Correction de la création du fichier de configuration du wifi
    + Correction des sauts de lignes dans les fichiers calc_XX

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Feb 8  17:52:12 CET 2014


Cultibox (1.3.02) precise; urgency=low
    + Ajout d'un vérification d'écriture sur la carte SD avant le formatage
    + Ajout d'un menu de configuration wifi
    + Correction des caractères \n dans le calendrier et le fichier index

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Feb  4 13:31:07 CET 2014


Cultibox (1.3.01) precise; urgency=low
    + Ajout d'une table de type de capteur
    + Mise à jour de la table type de capteur par le fichier index
    + Optimisation du chargement des logs par la lecture en un coup des fichiers et l'optimisation du parcours du fichier index

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Feb  4 10:31:07 CET 2014


Cultibox (1.2.12) precise; urgency=low
    + Plus de limites de caractères pour les fichiers cal_XX
    + Correction du calendrier (glissement des évènements qui supprimaient les annotations + problème de liste des titres en cas d'erreur)

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Jan 18 13:16:34 CET 2014


Cultibox (1.2.11) precise; urgency=low
    + Correction de l'affichage des puissances dans la partie logs (nom des prises)
    + Correction de l'affichage des puissances (bouton next et prev)
    + un zoom par courbe disponible dans l'onglet log (puissance,humidité,témpérature)
    + Ajout des couleurs sur les grilles des échelles des logs