@@ -59,6 +59,7 @@ CREATE TABLE IF NOT EXISTS `configuration` (
   `WIFI_SSID` VARCHAR(32),
   `WIFI_KEY_TYPE` VARCHAR(10) NOT NULL DEFAULT 'NONE',
   `WIFI_PASSWORD` VARCHAR(63),
+  `WIFI_IP` VARCHAR(15) NOT NULL DEFAULT '192.168.0.200',
   PRIMARY KEY (`id`)
 ) ENGINE=InnoDB  DEFAULT CHARSET=utf8 AUTO_INCREMENT=1 ;
 
